change the name of the segment file to metafiles

--- a/segment_linking.conf
+++ b/segment_linking.conf
@@ -2,11 +2,11 @@
 # Available at: https://github.com/CogentRedTester/mpv-segment-linking
 
 # loads segment information from the given segment meta file instead of scanning for it
-segment_files=
+metafile=
 
 # if the current file cannot be read, then fallback to the default segment meta file
-fallback_to_segment_file=yes
+fallback_to_metafile=yes
 
 # the default segment file, the script will search for a file with this name inside
 # the directory of the current file
-default_segment_file=".segment-linking"
+default_metafile=".segment-linking"
