--- a/segment_linking.conf
+++ b/segment_linking.conf
@@ -9,4 +9,4 @@ fallback_to_metafile=yes
 
 # the default segment file, the script will search for a file with this name inside
 # the directory of the current file
-default_metafile=".segment-linking"
+default_metafile=.segment-linking
